<resources>
    <string name="app_name">A3</string>
    <string name="meetingTitle">Meeting Name</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_add">Add Meeting</string>
    <string name="title_list">List</string>
    <string name="Category">Category</string>
    <string name="DescriptionLabel">Description</string>
    <string name="descHint">Enter a description</string>
    <string name="date1">Start Date</string>
    <string name="date2">End Date</string>
    <string name="time1">Start Time</string>
    <string name="time2">End Time</string>
    <string name="AttendeesLabel">Attendees</string>
    <string name="locationHint">Enter a location</string>
    <string name="add">Add</string>
    <string name="LocationLabel">Location</string>
    <string name="ReminderLabel">Reminder</string>

    <string-array name="Categories">
        <item>Personal</item>
        <item>School</item>
        <item>Work</item>
    </string-array>

    <string-array name="Reminders">
        <item>5 minutes before</item>
        <item>15 minutes before</item>
        <item>30 minutes before</item>
        <item>1 hour before</item>
        <item>Custom time</item>
    </string-array>
</resources>