<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add.AddMeetingFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/meeting_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/meetingTitle"
                    android:textSize="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/meetingInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/meetingInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/meeting_label"
                    app:layout_constraintTop_toBottomOf="@+id/meeting_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/meeting_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter Meeting Name"
                        android:imeOptions="actionDone"
                        android:inputType="textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meetingInputLayout"/>

                <TextView
                    android:id="@+id/CategoryLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/Category"
                    android:textSize="@dimen/h1"
                    android:layout_marginTop="@dimen/seperator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider1" />

                <Spinner
                    android:id="@+id/CategorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:entries="@array/Categories"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/CategoryLabel" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/CategorySpinner"/>

                <TextView
                    android:id="@+id/descLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DescriptionLabel"
                    android:textSize="@dimen/h1"
                    android:layout_marginLeft="@dimen/seperator"
                    android:layout_marginTop="@dimen/seperator"
                    app:layout_constraintTop_toBottomOf="@+id/divider2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/seperator"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="@dimen/seperator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/descHint"
                        android:imeOptions="actionDone"
                        android:inputType="textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date_1"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="@dimen/seperator"
                    app:boxStrokeColor="#00FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date_editText_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFFFFF"
                        android:hint="@string/date1"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/time_1"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/seperator"
                    android:layout_marginEnd="24dp"
                    app:boxBackgroundColor="#00FFFFFF"
                    app:boxStrokeColor="#00FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/date_1"
                    app:layout_constraintTop_toBottomOf="@+id/descTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/timeEditText1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFFFFF"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/time1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date_2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="12dp"
                    app:boxStrokeColor="#00FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date_1"
  >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date_editText_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFFFFF"
                        android:hint="@string/date2"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/time_2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    app:boxStrokeColor="#00FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/date_1"
                    app:layout_constraintTop_toBottomOf="@+id/time_1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/timeEditText2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFFFFF"
                        android:hint="@string/time2"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date_2"/>

                <TextView
                    android:id="@+id/LocationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LocationLabel"
                    android:textSize="@dimen/h1"
                    android:layout_marginTop="@dimen/seperator"
                    android:layout_marginLeft="@dimen/seperator"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider3"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LocationTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/seperator"
                    android:layout_marginRight="@dimen/seperator"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/LocationLabel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/locationHint"
                        android:inputType="textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/LocationTextInputLayout"/>

                <TextView
                    android:id="@+id/AttendeesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AttendeesLabel"
                    android:textSize="@dimen/h1"
                    app:layout_constraintTop_toBottomOf="@+id/divider4"
                    android:layout_marginTop="@dimen/seperator"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    android:layout_marginLeft="24dp"/>

                <GridLayout
                    android:id="@+id/attendeesList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="411dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/AttendeesLabel"/>

                <Button
                    android:id="@+id/addAttendeesButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:text="@string/add"
                    app:layout_constraintTop_toBottomOf="@+id/attendeesList"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    android:layout_marginLeft="@dimen/seperator"
                    android:layout_marginTop="12dp"
                    />

                <TextView
                    android:id="@+id/ReminderLabel"
                    android:text="@string/ReminderLabel"
                    android:textSize="@dimen/h1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toStartOf="@+id/ReminderSpinner"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addAttendeesButton" />

                <Spinner
                    android:id="@+id/ReminderSpinner"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/seperator"
                    android:layout_marginTop="12dp"
                    android:entries="@array/Reminders"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ReminderLabel" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:text="Save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ReminderSpinner" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>